# ED2526

./: CMakeList.txt  FlujoSubida.txt  README.md  helloWorld.c  numeros.c
Canales/src/: principal.c
Canales/src/canalesl/: canales.c
Practica1/TaskSchedulerWorkSpace/: CMakeLists.txt
Practica1/TaskSchedulerWorkSpace/src/: MainScheduler.c  MainTask.c  Scheduler.c  Task.c
Practica2/hashWorkSpace/: CMakeLists.txt  main.c
Practica2/hashWorkSpace/gestionAcceso/: hash.c  hash.h  persona.c  persona.h
Repaso ED/ListaEnlazada/: CMakeLists.txt  main.c
Repaso ED/TaskSchedulerWorkSpace/: CMakeLists.txt
Repaso ED/TaskSchedulerWorkSpace/src/: Scheduler.c  Task.c
Sesion1y2/: centroide.c  medias.c  mesesanyo.c  modificadores.c  padding.c  sumaMatrices.c  sumadevariables.c  sumateclado.c
Sesion3/espaciotrabajo/: CMakeLists.txt  principal.c  principal2.c
Sesion3_OPT/: ejerPtr2.c
Sesion3_OPT/espaciotrabajo/: CMakeLists.txt  ejerPtr1.c  ejerPtr2.c  ejerPtr3.c  ejerPtrArr1.c  ejerPtrCad1.c  ejerPtrCad2.c  ejerPtrCad3.c  ejerPtrStruct.c  principal.c  principal2.c
Sesion4/: CMakeLists.txt  FugaMemoria.c  memoriaDinamica1.c  memoriaExplosiva.c  primeraListaEnlazada.c  primeraListaEnlazada.h
Sesion5/src/TipoPuntero/: CMakeLists.txt
Sesion6/MemoriaDinamica/ColaCircular/: CMakeLists.txt
Sesion6/MemoriaDinamica/ColaEnlazada/: CMakeLists.txt
Sesion7/Pila/: CMakeLists.txt
Sesion8/CList Circular/: CMakeList.txt
Sesion8/CList Circular/src/: linked_practices.h
Sesion8/DCList doblemente circular/src/: linked_practices.h
Sesion8/DCSentinelList/src/: linked_practices.h
(+13 files in other folders)
